Remove unnecessary classes

--- a/Oazis.Api/uSync/v11/ContentTypes/hamburgers.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/hamburgers.config
@@ -1,29 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="0c52f31f-ad74-44c2-b87d-23fc71827480" Alias="hamburgers" Level="1">
-  <Info>
-    <Name>Hamburgers</Name>
-    <Icon>icon-food color-blue</Icon>
-    <Thumbnail>folder.png</Thumbnail>
-    <Description></Description>
-    <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
-    <Variations>Nothing</Variations>
-    <IsElement>false</IsElement>
-    <HistoryCleanup>
-      <PreventCleanup>False</PreventCleanup>
-      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
-      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
-    </HistoryCleanup>
-    <Compositions>
-      <Composition Key="b7badfa5-d1a3-4c8c-b09d-17ba535eff98">basicMainPages</Composition>
-      <Composition Key="b299818b-eb78-4db0-ae05-37ea9f256638">mainNavigation</Composition>
-    </Compositions>
-    <DefaultTemplate></DefaultTemplate>
-    <AllowedTemplates />
-  </Info>
-  <Structure>
-    <ContentType Key="80aba047-5038-4512-9524-bcd3e5c5f53e" SortOrder="0">hamburger</ContentType>
-  </Structure>
-  <GenericProperties />
-  <Tabs />
-</ContentType>
+<Empty Key="0c52f31f-ad74-44c2-b87d-23fc71827480" Alias="hamburgers" Change="Delete" />
