--- a/Oazis.Api/uSync/v11/ContentTypes/oazis.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/oazis.config
@@ -26,7 +26,9 @@
     <ContentType Key="fbb232ed-59ea-42ee-a705-8e83b1a10d06" SortOrder="4">weeklyMenu</ContentType>
     <ContentType Key="b2bf2273-c00b-42fa-b50b-b8522f5eb123" SortOrder="5">carousel</ContentType>
     <ContentType Key="6aed7922-b187-4389-a2e4-15cadd848f3b" SortOrder="6">galery</ContentType>
-    <ContentType Key="f7996166-2f82-4b32-b0ee-be07531b1476" SortOrder="7">links</ContentType>
+    <ContentType Key="f7996166-2f82-4b32-b0ee-be07531b1476" SortOrder="7">socialLinks</ContentType>
+    <ContentType Key="54acc595-479e-4bb1-836f-266e2c313aa7" SortOrder="8">drinks</ContentType>
+    <ContentType Key="4709e3e3-36ee-483e-a252-1c408dd4e522" SortOrder="9">drinkTypes</ContentType>
   </Structure>
   <GenericProperties />
   <Tabs />
