--- a/Oazis.Api/uSync/v11/ContentTypes/product.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/product.config
@@ -21,6 +21,22 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>f8f35f34-f8d4-4012-9e3b-c1e14bd389e4</Key>
+      <Name>HasSecondPrice</Name>
+      <Alias>hasSecondPrice</Alias>
+      <Definition>9a88a285-cd1a-438c-8d9d-c7ac1519bf5f</Definition>
+      <Type>Our.Umbraco.CdDropdownFlexible</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>3</SortOrder>
+      <Tab Alias="additionalInformations">Additional Informations</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>09e03e98-7a95-453d-b84e-2a4c11a84b40</Key>
       <Name>Ingredients</Name>
       <Alias>ingredients</Alias>
@@ -69,6 +85,22 @@
       <LabelOnTop>false</LabelOnTop>
     </GenericProperty>
     <GenericProperty>
+      <Key>07720707-d323-4c77-8a7d-a302236f0a84</Key>
+      <Name>Second Price</Name>
+      <Alias>secondPrice</Alias>
+      <Definition>2e6d3631-066e-44b8-aec4-96f09099b2b5</Definition>
+      <Type>Umbraco.Integer</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>2</SortOrder>
+      <Tab Alias="additionalInformations">Additional Informations</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
       <Key>b7721b07-2c73-42d3-99f9-5580dca103ba</Key>
       <Name>Serial Number</Name>
       <Alias>serialNumber</Alias>
@@ -79,6 +111,22 @@
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
       <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>52edd974-ee93-41b1-9f4d-77996694334e</Key>
+      <Name>TypeOfFood</Name>
+      <Alias>typeOfFood</Alias>
+      <Definition>1144cf40-6037-497c-99ac-40ecdf315f2e</Definition>
+      <Type>Our.Umbraco.CdDropdownFlexible</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab Alias="additionalInformations">Additional Informations</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
