--- a/Oazis.Api/uSync/v11/ContentTypes/garnish.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/garnish.config
@@ -1,26 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="4f4b3373-08fe-4546-9c46-0ea087226d17" Alias="garnish" Level="1">
-  <Info>
-    <Name>Garnish</Name>
-    <Icon>icon-science color-pink</Icon>
-    <Thumbnail>folder.png</Thumbnail>
-    <Description></Description>
-    <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
-    <Variations>Nothing</Variations>
-    <IsElement>false</IsElement>
-    <HistoryCleanup>
-      <PreventCleanup>False</PreventCleanup>
-      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
-      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
-    </HistoryCleanup>
-    <Compositions>
-      <Composition Key="8fb31c30-1dd4-48cd-8b1e-9dd2912e75ae">basicFoodProperties</Composition>
-    </Compositions>
-    <DefaultTemplate></DefaultTemplate>
-    <AllowedTemplates />
-  </Info>
-  <Structure />
-  <GenericProperties />
-  <Tabs />
-</ContentType>
+<Empty Key="4f4b3373-08fe-4546-9c46-0ea087226d17" Alias="garnish" Change="Delete" />
