--- a/Oazis.Api/uSync/v11/ContentTypes/pizza.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/pizza.config
@@ -1,51 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="6134b6f0-7600-41ed-a2d0-6cfc4f5ff492" Alias="pizza" Level="1">
-  <Info>
-    <Name>Pizza</Name>
-    <Icon>icon-pie-chart color-green</Icon>
-    <Thumbnail>folder.png</Thumbnail>
-    <Description></Description>
-    <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
-    <Variations>Nothing</Variations>
-    <IsElement>false</IsElement>
-    <HistoryCleanup>
-      <PreventCleanup>False</PreventCleanup>
-      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
-      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
-    </HistoryCleanup>
-    <Compositions>
-      <Composition Key="8fb31c30-1dd4-48cd-8b1e-9dd2912e75ae">basicFoodProperties</Composition>
-    </Compositions>
-    <DefaultTemplate></DefaultTemplate>
-    <AllowedTemplates />
-  </Info>
-  <Structure />
-  <GenericProperties>
-    <GenericProperty>
-      <Key>65ea5ee8-7a0a-499f-9c37-afdeeeaadf35</Key>
-      <Name>Ingredients</Name>
-      <Alias>ingredients</Alias>
-      <Definition>03d0fa8d-2a22-40bb-9c28-eadf36d3927d</Definition>
-      <Type>Umbraco.MultiNodeTreePicker</Type>
-      <Mandatory>true</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[Az étel összetevői]]></Description>
-      <SortOrder>0</SortOrder>
-      <Tab Alias="pizzaContent">Pizza Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-  </GenericProperties>
-  <Tabs>
-    <Tab>
-      <Key>101d90ff-6b7e-4b7a-be0a-578fba636532</Key>
-      <Caption>Pizza Content</Caption>
-      <Alias>pizzaContent</Alias>
-      <Type>Group</Type>
-      <SortOrder>1</SortOrder>
-    </Tab>
-  </Tabs>
-</ContentType>
+<Empty Key="6134b6f0-7600-41ed-a2d0-6cfc4f5ff492" Alias="pizza" Change="Delete" />
