--- a/Oazis.Api/uSync/v11/ContentTypes/sueltek.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/sueltek.config
@@ -1,29 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<ContentType Key="5b841a7c-4016-4bc4-8b2a-bd565eb2bb18" Alias="sueltek" Level="1">
-  <Info>
-    <Name>Frieds</Name>
-    <Icon>icon-food color-brown</Icon>
-    <Thumbnail>folder.png</Thumbnail>
-    <Description></Description>
-    <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
-    <Variations>Nothing</Variations>
-    <IsElement>false</IsElement>
-    <HistoryCleanup>
-      <PreventCleanup>False</PreventCleanup>
-      <KeepAllVersionsNewerThanDays></KeepAllVersionsNewerThanDays>
-      <KeepLatestVersionPerDayForDays></KeepLatestVersionPerDayForDays>
-    </HistoryCleanup>
-    <Compositions>
-      <Composition Key="b7badfa5-d1a3-4c8c-b09d-17ba535eff98">basicMainPages</Composition>
-      <Composition Key="b299818b-eb78-4db0-ae05-37ea9f256638">mainNavigation</Composition>
-    </Compositions>
-    <DefaultTemplate></DefaultTemplate>
-    <AllowedTemplates />
-  </Info>
-  <Structure>
-    <ContentType Key="ec63a585-c581-4336-b0b0-444661917655" SortOrder="0">fried</ContentType>
-  </Structure>
-  <GenericProperties />
-  <Tabs />
-</ContentType>
+<Empty Key="5b841a7c-4016-4bc4-8b2a-bd565eb2bb18" Alias="sueltek" Change="Delete" />
