--- a/Oazis.Api/uSync/v11/DataTypes/CarouselItemTextRichTextEditor.config
+++ b/Oazis.Api/uSync/v11/DataTypes/CarouselItemTextRichTextEditor.config
@@ -6,6 +6,7 @@
     <DatabaseType>Ntext</DatabaseType>
   </Info>
   <Config><![CDATA[{
+  "Blocks": [],
   "Editor": {
     "toolbar": [
       "ace",
@@ -21,7 +22,8 @@
       "numlist",
       "outdent",
       "indent",
-      "link"
+      "link",
+      "umbmediapicker"
     ],
     "stylesheets": [],
     "maxImageSize": 500,
@@ -30,6 +32,7 @@
   "HideLabel": false,
   "IgnoreUserStartNodes": false,
   "MediaParentId": null,
-  "OverlaySize": "small"
+  "OverlaySize": "small",
+  "UseLiveEditing": false
 }]]></Config>
 </DataType>
