--- a/Oazis.Api/uSync/v11/DataTypes/FoodIngredientsMultinodeTreepicker.config
+++ b/Oazis.Api/uSync/v11/DataTypes/FoodIngredientsMultinodeTreepicker.config
@@ -12,6 +12,7 @@
   "MinNumber": 0,
   "ShowOpen": false,
   "TreeSource": {
+    "dynamicRoot": null,
     "id": "umb://document/0a0ec199c73f4a819983a19e34fb9a7d",
     "query": null,
     "type": "content"
