--- a/Oazis.Api/uSync/v11/ContentTypes/drinks.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/drinks.config
@@ -6,7 +6,7 @@
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
+    <ListView>00000000-0000-0000-0000-000000000000</ListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
     <HistoryCleanup>
@@ -18,7 +18,9 @@
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
   </Info>
-  <Structure />
+  <Structure>
+    <ContentType Key="09e31ec7-d83d-436d-b970-ad2d4cd9629c" SortOrder="0">drinkGroup</ContentType>
+  </Structure>
   <GenericProperties />
   <Tabs />
 </ContentType>
