--- a/Oazis.Api/uSync/v11/ContentTypes/kitchen.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/kitchen.config
@@ -6,7 +6,7 @@
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>True</AllowAtRoot>
-    <IsListView>False</IsListView>
+    <ListView>00000000-0000-0000-0000-000000000000</ListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
     <HistoryCleanup>
@@ -20,7 +20,8 @@
   </Info>
   <Structure>
     <ContentType Key="362971c9-f484-4f71-a271-70b5ba1db949" SortOrder="0">ingredients</ContentType>
-    <ContentType Key="013ce7e9-44fb-4260-a3ff-886889094d95" SortOrder="1">tags</ContentType>
+    <ContentType Key="013ce7e9-44fb-4260-a3ff-886889094d95" SortOrder="1">productTypes</ContentType>
+    <ContentType Key="4709e3e3-36ee-483e-a252-1c408dd4e522" SortOrder="2">drinkTypes</ContentType>
   </Structure>
   <GenericProperties />
   <Tabs />
