--- a/Oazis.Api/uSync/v11/ContentTypes/product.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/product.config
@@ -6,7 +6,7 @@
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
+    <ListView>00000000-0000-0000-0000-000000000000</ListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
     <HistoryCleanup>
@@ -20,22 +20,6 @@
   </Info>
   <Structure />
   <GenericProperties>
-    <GenericProperty>
-      <Key>f8f35f34-f8d4-4012-9e3b-c1e14bd389e4</Key>
-      <Name>HasSecondPrice</Name>
-      <Alias>hasSecondPrice</Alias>
-      <Definition>9a88a285-cd1a-438c-8d9d-c7ac1519bf5f</Definition>
-      <Type>Our.Umbraco.CdDropdownFlexible</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>3</SortOrder>
-      <Tab Alias="additionalInformations">Additional Informations</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
     <GenericProperty>
       <Key>09e03e98-7a95-453d-b84e-2a4c11a84b40</Key>
       <Name>Ingredients</Name>
@@ -121,7 +105,7 @@
       <Name>TypeOfFood</Name>
       <Alias>typeOfFood</Alias>
       <Definition>1144cf40-6037-497c-99ac-40ecdf315f2e</Definition>
-      <Type>Our.Umbraco.CdDropdownFlexible</Type>
+      <Type>Umbraco.Plain.String</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
