--- a/Oazis.Api/uSync/v11/DataTypes/CarouselItemTextRichTextEditor.config
+++ b/Oazis.Api/uSync/v11/DataTypes/CarouselItemTextRichTextEditor.config
@@ -2,37 +2,40 @@
 <DataType Key="34b94103-3497-47e7-9678-88b4c6d45991" Alias="Carousel Item - Text - Rich Text Editor" Level="1">
   <Info>
     <Name>Carousel Item - Text - Rich Text Editor</Name>
-    <EditorAlias>Umbraco.TinyMCE</EditorAlias>
-    <DatabaseType>Ntext</DatabaseType>
+    <EditorAlias>Umbraco.RichText</EditorAlias>
+    <EditorUIAlias>Umb.PropertyEditorUi.TinyMCE</EditorUIAlias>
   </Info>
   <Config><![CDATA[{
-  "Blocks": [],
-  "Editor": {
-    "toolbar": [
-      "ace",
-      "styles",
-      "bold",
-      "italic",
-      "underline",
-      "alignleft",
-      "aligncenter",
-      "alignright",
-      "alignjustify",
-      "bullist",
-      "numlist",
-      "outdent",
-      "indent",
-      "link",
-      "umbmediapicker"
-    ],
-    "stylesheets": [],
-    "maxImageSize": 500,
-    "mode": "classic"
-  },
-  "HideLabel": false,
-  "IgnoreUserStartNodes": false,
-  "MediaParentId": null,
-  "OverlaySize": "small",
-  "UseLiveEditing": false
+  "hideLabel": false,
+  "ignoreUserStartNodes": false,
+  "maxImageSize": 500,
+  "mode": "Classic",
+  "overlaySize": "small",
+  "stylesheets": [
+    "/Custom Styles"
+  ],
+  "toolbar": [
+    "styles",
+    "fontname",
+    "fontsize",
+    "bold",
+    "italic",
+    "underline",
+    "alignleft",
+    "aligncenter",
+    "alignright",
+    "alignjustify",
+    "bullist",
+    "numlist",
+    "outdent",
+    "indent",
+    "table",
+    "hr",
+    "link",
+    "sourcecode",
+    "umbmediapicker"
+  ],
+  "umbMigrationV14": "2024-06-04T21:07:33.4008346+02:00",
+  "useLiveEditing": false
 }]]></Config>
 </DataType>
