--- a/Oazis.Api/uSync/v11/ContentTypes/carouselitem.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/carouselitem.config
@@ -6,7 +6,7 @@
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
+    <ListView>00000000-0000-0000-0000-000000000000</ListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
     <HistoryCleanup>
@@ -57,7 +57,7 @@
       <Name>Text</Name>
       <Alias>text</Alias>
       <Definition>34b94103-3497-47e7-9678-88b4c6d45991</Definition>
-      <Type>Umbraco.TinyMCE</Type>
+      <Type>Umbraco.RichText</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
