--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,30 +6,38 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-   steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: '8.0.0'
 
-    - name: Set up .NET
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: '8.0.0'
+      - name: Restore dependencies
+        run: dotnet restore
 
-     - name: Restore dependencies
-      run: dotnet restore
+      - name: Build .NET project
+        run: dotnet build -c Release
 
-    - name: Build .NET project
-      run: dotnet build -c Release
+      - name: Publish .NET project
+        run: dotnet publish -c Release -o ./publish
+        
+      - name: Copy files via SSH
+        uses: appleboy/scp-action@v0.1.3
+        with:
+          host: ${{ secrets.VPS_ADDRESS }}
+          username: root
+          password: ${{ secrets.VPS_PSW }}
+          source: "./publish/*"
+          target: "/var/www/oazis-api/"
 
-    - name: Publish .NET project
-      run: dotnet publish -c Release -o ./publish
-      
-    - name: Copy files via SSH
-      uses: appleboy/scp-action@v0.1.3
-      with:
-        host: ${{ secrets.VPS_ADDRESS }}
-        username: root
-        password: ${{ secrets.VPS_PSW }}
-        source: "./publish/*"
-        target: "/var/www/oazis-api/"
+      - name: Restart .NET application
+        uses: appleboy/ssh-action@v0.1.4
+        with:
+          host: ${{ secrets.VPS_ADDRESS }}
+          username: root
+          password: ${{ secrets.VPS_PSW }}
+          script: |
+            systemctl restart my-dotnet-app.service
