--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,7 +35,9 @@ jobs:
           username: root
           password: ${{ secrets.VPS_PSW }}
           script: |
-            cp -r /var/www/oazis-api /var/www/oazis-api_backup
+            if [ -d /var/www/oazis-api ]; then
+              cp -r /var/www/oazis-api /var/www/oazis-api_backup
+            fi
 
       - name: Clean target directory on VPS
         uses: appleboy/ssh-action@v0.1.4
@@ -44,7 +46,9 @@ jobs:
           username: root
           password: ${{ secrets.VPS_PSW }}
           script: |
-            rm -rf /var/www/oazis-api/*
+            if [ -d /var/www/oazis-api ]; then
+              rm -rf /var/www/oazis-api
+            fi
 
       - name: Copy files via SSH
         uses: appleboy/scp-action@v0.1.3
@@ -63,7 +67,7 @@ jobs:
           username: root
           password: ${{ secrets.VPS_PSW }}
           script: |
-            systemctl restart my-dotnet-app.service
+            # systemctl restart my-dotnet-app.service
         continue-on-error: true
 
       - name: Check if deployment succeeded
@@ -85,9 +89,11 @@ jobs:
           username: root
           password: ${{ secrets.VPS_PSW }}
           script: |
-            rm -rf /var/www/oazis-api
-            mv /var/www/oazis-api_backup /var/www/oazis-api
-            # systemctl restart my-dotnet-app.service
+            if [ -d /var/www/oazis-api_backup ]; then
+              rm -rf /var/www/oazis-api
+              mv /var/www/oazis-api_backup /var/www/oazis-api
+              # systemctl restart my-dotnet-app.service
+            fi
 
       # - name: Cleanup backup after successful deployment
       #   if: steps.check_status.outcome == 'success'
@@ -97,4 +103,6 @@ jobs:
       #     username: root
       #     password: ${{ secrets.VPS_PSW }}
       #     script: |
-      #       rm -rf /var/www/oazis-api_backup
+      #       if [ -d /var/www/oazis-api_backup ]; then
+      #         rm -rf /var/www/oazis-api_backup
+      #       fi
