--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -56,7 +56,7 @@ jobs:
           host: ${{ secrets.VPS_ADDRESS }}
           username: root
           password: ${{ secrets.VPS_PSW }}
-          source: "./oazis-api/*"
+          source: "./oazis-api"
           target: "/var/www/"
 
       - name: Restart .NET application
