--- a/Oazis.Api/appsettings.json
+++ b/Oazis.Api/appsettings.json
@@ -97,5 +97,12 @@
   "ConnectionStrings": {
     "umbracoDbDSN": "Data Source=D:/SqLiteDatabase/OazisDB.db;Cache=Shared;Foreign Keys=True;Pooling=True",
     "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      }
+    }
   }
 }
