--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -95,7 +95,7 @@
     }
   },
   "ConnectionStrings": {
-    "umbracoDbDSN": "Data Source=D:/SqLiteDatabase/OazisDB.db;Cache=Shared;Foreign Keys=True;Pooling=True",
+    "umbracoDbDSN": "Data Source=/var/www/data/OazisDB.db;Cache=Shared;Foreign Keys=True;Pooling=True",
     "umbracoDbDSN_ProviderName": "Microsoft.Data.Sqlite"
   },
   "Kestrel": {
