--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -8,7 +8,20 @@
         "Microsoft.Hosting.Lifetime": "Information",
         "System": "Warning"
       }
-    }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/var/log/oazis-api/log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7
+        }
+      }
+    ]
   },
   "Umbraco": {
     "CMS": {
