--- a/Oazis.Api/appsettings.json
+++ b/Oazis.Api/appsettings.json
@@ -8,7 +8,20 @@
         "Microsoft.Hosting.Lifetime": "Information",
         "System": "Warning"
       }
-    }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:/OwnWorks/Oazis/Oazis.Api/Logs/log.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7
+        }
+      }
+    ]
   },
   "Umbraco": {
     "CMS": {
