--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -27,7 +27,8 @@
     "CMS": {
       "Global": {
         "Id": "2af1b455-8e6e-49f1-9375-1c851a9fd63c",
-        "SanitizeTinyMce": true
+        "SanitizeTinyMce": true,
+        "UmbracoApplicationUrl": "http://193.39.15.78"
       },
       "Content": {
         "AllowEditInvariantFromNonDefault": true,
