--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -30,6 +30,9 @@
         "SanitizeTinyMce": true,
         "UmbracoApplicationUrl": "http://193.39.15.78"
       },
+      "WebRouting": {
+        "UmbracoApplicationUrl": "http://193.39.15.78"
+      },
       "Content": {
         "AllowEditInvariantFromNonDefault": true,
         "ContentVersionCleanupPolicy": {
