--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -28,10 +28,10 @@
       "Global": {
         "Id": "2af1b455-8e6e-49f1-9375-1c851a9fd63c",
         "SanitizeTinyMce": true,
-        "UmbracoApplicationUrl": "http://193.39.15.78"
+        "UmbracoApplicationUrl": "http://193.39.15.78/"
       },
       "WebRouting": {
-        "UmbracoApplicationUrl": "http://193.39.15.78"
+        "UmbracoApplicationUrl": "http://193.39.15.78/"
       },
       "Content": {
         "AllowEditInvariantFromNonDefault": true,
@@ -71,11 +71,12 @@
       "SignalRRoot": "",
       "EnableHistory": true,
       "DefaultExtension": "config",
-      "MyCustomSetting": true
+      "MyCustomSetting": true,
+      "ImportOnFirstBoot": false
     },
     "Sets": {
       "Default": {
-        "Enabled": true,
+        "Enabled": false,
         "HandlerGroups": [],
         "DisabledHandlers": [
           "ContentHandler-CO",
