--- a/Oazis.Api/appsettings.json
+++ b/Oazis.Api/appsettings.json
@@ -29,6 +29,9 @@
         "Id": "2af1b455-8e6e-49f1-9375-1c851a9fd63c",
         "SanitizeTinyMce": true
       },
+      "WebRouting": {
+        "UmbracoApplicationUrl": "https://localhost:44370/"
+      },
       "Content": {
         "AllowEditInvariantFromNonDefault": true,
         "ContentVersionCleanupPolicy": {
