--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -28,11 +28,11 @@
       "Global": {
         "Id": "2af1b455-8e6e-49f1-9375-1c851a9fd63c",
         "SanitizeTinyMce": true,
-        "UmbracoApplicationUrl": "http://193.39.15.78/",
+        "UmbracoApplicationUrl": "https://www.oazisvendeglo.hu/",
         "UseHttps": false
       },
       "WebRouting": {
-        "UmbracoApplicationUrl": "http://193.39.15.78/"
+        "UmbracoApplicationUrl": "https://www.oazisvendeglo.hu/"
       },
       "Content": {
         "AllowEditInvariantFromNonDefault": true,
