--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -29,7 +29,7 @@
         "Id": "2af1b455-8e6e-49f1-9375-1c851a9fd63c",
         "SanitizeTinyMce": true,
         "UmbracoApplicationUrl": "https://www.oazisvendeglo.hu/",
-        "UseHttps": false
+        "UseHttps": true
       },
       "WebRouting": {
         "UmbracoApplicationUrl": "https://www.oazisvendeglo.hu/"
