fix modelsbuilder config

--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -41,13 +41,13 @@
         }
       },
       "ModelsBuilder": {
-        "ModelsDirectory": "D:/OwnWorks/Oazis/Oazis.Api/Oazis.Domain/ModelsBuilder",
+        "ModelsDirectory": "~/umbraco/models",
         "ModelsNamespace": "Oazis.Domain.ModelsBuilder",
         "ModelsMode": "SourceCodeManual",
-        "AcceptUnsafeModelsDirectory": true
+        "AcceptUnsafeModelsDirectory": false,
       },
       "Unattended": {
-        "UpgradeUnattended": true
+        "UpgradeUnattended": false
       },
       "Security": {
         "AllowConcurrentLogins": false
