--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,7 +32,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.VPS_ADDRESS }}
-          username: root
+          username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PSW }}
           script: |
             if [ -d /var/www/oazis-api ]; then
@@ -43,7 +43,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.VPS_ADDRESS }}
-          username: root
+          username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PSW }}
           script: |
             if [ -d /var/www/oazis-api ]; then
@@ -54,7 +54,7 @@ jobs:
         uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.VPS_ADDRESS }}
-          username: root
+          username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PSW }}
           source: "./oazis-api"
           target: "/var/www/"
@@ -64,7 +64,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.VPS_ADDRESS }}
-          username: root
+          username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PSW }}
           script: |
             # systemctl restart oazis-api.service
@@ -75,7 +75,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.VPS_ADDRESS }}
-          username: root
+          username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PSW }}
           script: |
             # systemctl is-active oazis-api.service
@@ -86,7 +86,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.VPS_ADDRESS }}
-          username: root
+          username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PSW }}
           script: |
             if [ -d /var/www/oazis-api_backup ]; then
@@ -100,7 +100,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.VPS_ADDRESS }}
-          username: root
+          username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PSW }}
           script: |
             if [ -d /var/www/oazis-api_backup ]; then
