--- a/Oazis.Api/uSync/v11/ContentTypes/drink.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/drink.config
@@ -6,7 +6,7 @@
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
+    <ListView>00000000-0000-0000-0000-000000000000</ListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
     <HistoryCleanup>
@@ -46,22 +46,6 @@
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>1</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>e44f465b-ff4d-44f6-9338-0832c9a58f89</Key>
-      <Name>Second Price</Name>
-      <Alias>secondPrice</Alias>
-      <Definition>2e6d3631-066e-44b8-aec4-96f09099b2b5</Definition>
-      <Type>Umbraco.Integer</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>2</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
