--- a/Oazis.Api/uSync/v11/ContentTypes/oazis.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/oazis.config
@@ -6,7 +6,7 @@
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>True</AllowAtRoot>
-    <IsListView>False</IsListView>
+    <ListView>00000000-0000-0000-0000-000000000000</ListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
     <HistoryCleanup>
@@ -28,7 +28,6 @@
     <ContentType Key="6aed7922-b187-4389-a2e4-15cadd848f3b" SortOrder="6">galery</ContentType>
     <ContentType Key="f7996166-2f82-4b32-b0ee-be07531b1476" SortOrder="7">socialLinks</ContentType>
     <ContentType Key="54acc595-479e-4bb1-836f-266e2c313aa7" SortOrder="8">drinks</ContentType>
-    <ContentType Key="4709e3e3-36ee-483e-a252-1c408dd4e522" SortOrder="9">drinkTypes</ContentType>
   </Structure>
   <GenericProperties />
   <Tabs />
