--- a/Oazis.Api/uSync/v11/ContentTypes/producttype.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/producttype.config
@@ -6,7 +6,7 @@
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
+    <ListView>00000000-0000-0000-0000-000000000000</ListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
     <HistoryCleanup>
@@ -20,22 +20,6 @@
   </Info>
   <Structure />
   <GenericProperties>
-    <GenericProperty>
-      <Key>927b866d-d6ed-4b8a-850a-4875664e2d89</Key>
-      <Name>Product Image</Name>
-      <Alias>productImage</Alias>
-      <Definition>ad9f0cf2-bda2-45d5-9ea1-a63cfc873fd3</Definition>
-      <Type>Umbraco.MediaPicker3</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>2</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
     <GenericProperty>
       <Key>655558cf-edda-4e50-b0c5-169201403923</Key>
       <Name>Type Name</Name>
