Extend RTE with new css

--- a/Oazis.Api/uSync/v11/ContentTypes/gridcomposition.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/gridcomposition.config
@@ -6,7 +6,7 @@
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
+    <ListView>00000000-0000-0000-0000-000000000000</ListView>
     <Variations>Nothing</Variations>
     <IsElement>true</IsElement>
     <HistoryCleanup>
@@ -31,7 +31,7 @@
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
-      <Tab Alias="gridContent1">Grid Content</Tab>
+      <Tab Alias="gridContent">Grid Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
       <ValidationRegExpMessage></ValidationRegExpMessage>
@@ -42,7 +42,7 @@
     <Tab>
       <Key>c5e44015-8989-459c-a81a-8ef2802b90e5</Key>
       <Caption>Grid Content</Caption>
-      <Alias>gridContent1</Alias>
+      <Alias>gridContent</Alias>
       <Type>Group</Type>
       <SortOrder>0</SortOrder>
     </Tab>
