--- a/Oazis.Api/uSync/v11/DataTypes/RichtextEditor.config
+++ b/Oazis.Api/uSync/v11/DataTypes/RichtextEditor.config
@@ -2,32 +2,38 @@
 <DataType Key="ca90c950-0aff-4e72-b976-a30b1ac57dad" Alias="Richtext editor" Level="1">
   <Info>
     <Name>Richtext editor</Name>
-    <EditorAlias>Umbraco.TinyMCE</EditorAlias>
-    <DatabaseType>Ntext</DatabaseType>
+    <EditorAlias>Umbraco.RichText</EditorAlias>
+    <EditorUIAlias>Umb.PropertyEditorUi.TinyMCE</EditorUIAlias>
   </Info>
   <Config><![CDATA[{
-  "Editor": {
-    "toolbar": [
-      "ace",
-      "styles",
-      "bold",
-      "italic",
-      "alignleft",
-      "aligncenter",
-      "alignright",
-      "bullist",
-      "numlist",
-      "outdent",
-      "indent",
-      "link"
-    ],
-    "stylesheets": [],
-    "maxImageSize": 500,
-    "mode": "classic"
-  },
-  "HideLabel": false,
-  "IgnoreUserStartNodes": false,
-  "MediaParentId": null,
-  "OverlaySize": "small"
+  "hideLabel": false,
+  "ignoreUserStartNodes": false,
+  "maxImageSize": 500,
+  "mode": "Classic",
+  "overlaySize": "small",
+  "toolbar": [
+    "styles",
+    "fontname",
+    "fontsize",
+    "forecolor",
+    "backcolor",
+    "formatblock",
+    "removeformat",
+    "bold",
+    "italic",
+    "alignleft",
+    "aligncenter",
+    "alignright",
+    "bullist",
+    "numlist",
+    "outdent",
+    "indent",
+    "table",
+    "hr",
+    "link",
+    "sourcecode",
+    "umbmediapicker"
+  ],
+  "umbMigrationV14": "2024-06-04T21:07:33.3685476+02:00"
 }]]></Config>
 </DataType>
