--- a/Oazis.Api/appsettings.Production.json
+++ b/Oazis.Api/appsettings.Production.json
@@ -77,7 +77,7 @@
     },
     "Sets": {
       "Default": {
-        "Enabled": false,
+        "Enabled": true,
         "HandlerGroups": [],
         "DisabledHandlers": [
           "ContentHandler-CO",
