--- a/Oazis.Api/uSync/v11/ContentTypes/dailymenu.config
+++ b/Oazis.Api/uSync/v11/ContentTypes/dailymenu.config
@@ -6,7 +6,7 @@
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
-    <IsListView>False</IsListView>
+    <ListView>00000000-0000-0000-0000-000000000000</ListView>
     <Variations>Nothing</Variations>
     <IsElement>false</IsElement>
     <HistoryCleanup>
@@ -41,7 +41,7 @@
       <Name>Foods</Name>
       <Alias>foods</Alias>
       <Definition>3521894a-9a8a-492d-8b79-3bba6a715a23</Definition>
-      <Type>Umbraco.TinyMCE</Type>
+      <Type>Umbraco.RichText</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
