--- a/Oazis.Api/uSync/v11/DataTypes/GridCompositionBlockGrid.config
+++ b/Oazis.Api/uSync/v11/DataTypes/GridCompositionBlockGrid.config
@@ -3,102 +3,74 @@
   <Info>
     <Name>Grid Composition - Block Grid</Name>
     <EditorAlias>Umbraco.BlockGrid</EditorAlias>
-    <DatabaseType>Ntext</DatabaseType>
+    <EditorUIAlias>Umb.PropertyEditorUi.BlockGrid</EditorUIAlias>
   </Info>
   <Config><![CDATA[{
-  "BlockGroups": [
+  "blockGroups": [
     {
       "key": "843c777b-3a4d-48df-8db9-0eadbed55573",
       "name": "Demo Blocks"
     }
   ],
-  "Blocks": [
+  "blocks": [
     {
+      "columnSpanOptions": [],
+      "rowMinSpan": 1,
+      "rowMaxSpan": 1,
       "allowAtRoot": true,
       "allowInAreas": true,
-      "areaGridColumns": null,
       "areas": [],
-      "backgroundColor": null,
-      "columnSpanOptions": [],
       "contentElementTypeKey": "7a12194e-317f-41de-a44e-32b5b60973d3",
-      "editorSize": "medium",
-      "forceHideContentEditorInOverlay": false,
-      "groupKey": "843c777b-3a4d-48df-8db9-0eadbed55573",
-      "iconColor": null,
-      "inlineEditing": false,
+      "view": "~/App_Plugins/Umbraco.BlockGridEditor.DefaultCustomViews/umbBlockGridDemoRichTextBlock.html",
       "label": "Rich Text  ({{richText | ncRichText | truncate:true:36}})",
-      "rowMaxSpan": 1,
-      "rowMinSpan": 1,
-      "settingsElementTypeKey": null,
-      "stylesheet": null,
-      "thumbnail": null,
-      "view": "~/App_Plugins/Umbraco.BlockGridEditor.DefaultCustomViews/umbBlockGridDemoRichTextBlock.html"
+      "editorSize": "medium",
+      "inlineEditing": false,
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": "843c777b-3a4d-48df-8db9-0eadbed55573"
     },
     {
+      "columnSpanOptions": [],
+      "rowMinSpan": 1,
+      "rowMaxSpan": 1,
       "allowAtRoot": true,
       "allowInAreas": true,
-      "areaGridColumns": null,
       "areas": [
         {
+          "key": "74941fa4-844e-4e50-a61a-84e1ee4bf2ad",
           "alias": "left",
           "columnSpan": 6,
-          "createLabel": null,
-          "key": "74941fa4-844e-4e50-a61a-84e1ee4bf2ad",
-          "maxAllowed": null,
-          "minAllowed": 0,
           "rowSpan": 1,
+          "minAllowed": 0,
           "specifiedAllowance": [
             {
-              "elementTypeKey": "7a12194e-317f-41de-a44e-32b5b60973d3",
-              "groupKey": null,
-              "maxAllowed": null,
-              "minAllowed": null
+              "elementTypeKey": "7a12194e-317f-41de-a44e-32b5b60973d3"
             }
           ]
         },
         {
+          "key": "52a81bc9-39f2-4f52-9862-c195b9f6bb1a",
           "alias": "right",
           "columnSpan": 6,
-          "createLabel": null,
-          "key": "52a81bc9-39f2-4f52-9862-c195b9f6bb1a",
-          "maxAllowed": null,
-          "minAllowed": 0,
           "rowSpan": 1,
+          "minAllowed": 0,
           "specifiedAllowance": [
             {
-              "elementTypeKey": "7a12194e-317f-41de-a44e-32b5b60973d3",
-              "groupKey": null,
-              "maxAllowed": null,
-              "minAllowed": null
+              "elementTypeKey": "7a12194e-317f-41de-a44e-32b5b60973d3"
             }
           ]
         }
       ],
-      "backgroundColor": null,
-      "columnSpanOptions": [],
       "contentElementTypeKey": "162f9146-265c-42da-9f48-7f5f69e7ff05",
-      "editorSize": "medium",
-      "forceHideContentEditorInOverlay": false,
-      "groupKey": "843c777b-3a4d-48df-8db9-0eadbed55573",
-      "iconColor": null,
-      "inlineEditing": false,
       "label": "",
-      "rowMaxSpan": 1,
-      "rowMinSpan": 1,
-      "settingsElementTypeKey": null,
-      "stylesheet": null,
-      "thumbnail": null,
-      "view": null
+      "editorSize": "medium",
+      "inlineEditing": false,
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": "843c777b-3a4d-48df-8db9-0eadbed55573"
     }
   ],
-  "CreateLabel": null,
-  "GridColumns": null,
-  "LayoutStylesheet": null,
-  "MaxPropertyWidth": null,
-  "UseLiveEditing": false,
-  "ValidationLimit": {
-    "max": 3,
-    "min": null
+  "useLiveEditing": false,
+  "validationLimit": {
+    "max": 3
   }
 }]]></Config>
 </DataType>
