--- a/Oazis.Api/uSync/v11/DataTypes/DailyMenuFoodsRichTextEditor.config
+++ b/Oazis.Api/uSync/v11/DataTypes/DailyMenuFoodsRichTextEditor.config
@@ -2,33 +2,36 @@
 <DataType Key="3521894a-9a8a-492d-8b79-3bba6a715a23" Alias="Daily Menu - Foods - Rich Text Editor" Level="1">
   <Info>
     <Name>Daily Menu - Foods - Rich Text Editor</Name>
-    <EditorAlias>Umbraco.TinyMCE</EditorAlias>
-    <DatabaseType>Ntext</DatabaseType>
+    <EditorAlias>Umbraco.RichText</EditorAlias>
+    <EditorUIAlias>Umb.PropertyEditorUi.TinyMCE</EditorUIAlias>
   </Info>
   <Config><![CDATA[{
-  "Editor": {
-    "toolbar": [
-      "ace",
-      "styles",
-      "bold",
-      "italic",
-      "alignleft",
-      "aligncenter",
-      "alignright",
-      "bullist",
-      "numlist",
-      "outdent",
-      "indent",
-      "link",
-      "umbembeddialog"
-    ],
-    "stylesheets": [],
-    "maxImageSize": 500,
-    "mode": "classic"
-  },
-  "HideLabel": false,
-  "IgnoreUserStartNodes": false,
-  "MediaParentId": null,
-  "OverlaySize": "small"
+  "hideLabel": false,
+  "ignoreUserStartNodes": false,
+  "maxImageSize": 500,
+  "mode": "Classic",
+  "overlaySize": "small",
+  "toolbar": [
+    "styles",
+    "fontname",
+    "fontsize",
+    "forecolor",
+    "backcolor",
+    "bold",
+    "italic",
+    "underline",
+    "alignleft",
+    "aligncenter",
+    "alignright",
+    "alignjustify",
+    "bullist",
+    "numlist",
+    "outdent",
+    "indent",
+    "link",
+    "sourcecode",
+    "umbembeddialog"
+  ],
+  "umbMigrationV14": "2024-06-04T21:07:33.3997749+02:00"
 }]]></Config>
 </DataType>
